# aissemble-pulse

./: .dockerignore  .env.example  .gitignore  PLAN.md  README.md  SPEC.md  docker-compose.yml  pyproject.toml
.cursor/: stack-check.md
.cursor/rules/: stack-runtime.md
deploy/docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
deploy/sql/: init-timescale.sql
deploy/sumy/: Dockerfile  README.md  requirements.txt
deploy/yolo/: README.md
docs/: city-pulse-debugging-retrospective.md  mlserver-smoke.md
models/: settings.json
models/sumy/: model-settings.json
models/yolov8/: model-settings.json
scripts/: preflight_stack.py  run_local_stack.sh  seed_dashboard_sample.py  verify_local.sh
src/city_pulse/: __init__.py  oip.py  stack_cli.py
src/city_pulse/config/: __init__.py  settings.py
src/city_pulse/dashboard/: __init__.py  app.py  data.py  stream_preview.py
src/city_pulse/db/: __init__.py  daily_briefs.py  pool.py  rollups.py  vehicle_counts.py
src/city_pulse/ingest/: __init__.py  __main__.py  backoff.py  capture.py  cli.py  metrics.py  models.py  redis_queue.py
src/city_pulse/nlp_jobs/: __init__.py  __main__.py  cli.py  daily_aggregate.py  daily_brief.py
src/city_pulse/workers/: __init__.py  __main__.py  cli.py  inference.py  vision_worker.py
tests/: test_smoke.py
tests/integration/: test_mlserver_ready.py  test_vision_path.py
tests/unit/: test_daily_aggregate.py  test_dashboard_data.py  test_inference_vehicle_count.py  test_ingest_backoff.py  test_ingest_capture.py  test_ingest_models.py  test_ingest_redis_queue.py  test_oip.py  test_stream_preview.py
