[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "city-pulse"
version = "0.1.0"
description = "City Pulse OSINT traffic pipeline (MDOT CHART → YOLO → Timescale → briefs)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "opencv-python-headless>=4.8",
    "redis>=5.0",
]

[project.scripts]
city-pulse-ingest = "city_pulse.ingest.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.8",
    "fakeredis>=2.23",
]
aissemble = [
    "aissemble-inference-deploy>=1.5",
    "aissemble-inference-yolo>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
    "integration: requires running Docker services (opt-in smoke)",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["city_pulse"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "cv2"
ignore_missing_imports = true
