[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "city-pulse"
version = "0.1.0"
description = "City Pulse OSINT traffic pipeline (MDOT CHART → YOLO → Timescale → briefs)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "opencv-python-headless>=4.8",
    "redis>=5.0",
    "httpx>=0.27",
    "psycopg[binary,pool]>=3.2",
    "pandas>=2.1",
    "streamlit>=1.31",
]

[project.scripts]
city-pulse-ingest = "city_pulse.ingest.cli:main"
city-pulse-vision-worker = "city_pulse.workers.cli:main"
city-pulse-daily-brief = "city_pulse.nlp_jobs.cli:main"
city-pulse-stack = "city_pulse.stack_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "mypy>=1.8",
    "fakeredis>=2.23",
    "pytest-httpserver>=1.1",
    "pandas-stubs>=2.0",
]
aissemble = [
    "aissemble-inference-deploy>=1.5",
    "aissemble-inference-yolo>=1.5",
    "aissemble-inference-sumy>=1.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
    "integration: requires running Docker services (opt-in smoke)",
]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["city_pulse"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = "cv2"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit"
ignore_missing_imports = true
